2007-11-28  Mathias Hasselmann  <mathias@openismus.com>

	Use lower directory hierarchy for storing certificates.

	* libepc/tls.c: Modify epc_tls_get_filename.

2007-11-28  Mathias Hasselmann  <mathias@openismus.com>

	Use a time based UUID as serial for self-signed certificates.
	Bug #500251.

	* configure.ac: Check for uuid >= 1.36.
	* libepc/tls.c: Pass UUID to gnutls_x509_crt_set_serial.

2007-11-28  Mathias Hasselmann  <mathias@openismus.com>

	Support dynamic ZeroConf bookmarks.

	* libepc/publisher.c, libepc/publisher.h:
	Add epc_publisher_add_bookmark and epc_publisher_get_path.
	Rename epc_publisher_get_url to epc_publisher_get_uri.
	* libepc/consumer.c: Use epc_publisher_get_path.
	* Makefile.am, tests/.gitignore: Add test-publisher-change-name.
	* tests/test-publisher-change-name.c: Test epc_publisher_add_bookmark.
	* docs/reference/libepc/libepc-1.0-sections.txt: Update symbols.

2007-11-28  Mathias Hasselmann  <mathias@openismus.com>

	Move epc_test_goto_if_fail to tests/framework.h.

	* tests/framework.h: Add epc_test_goto_if_fail.
	* tests/test-consumer-by-name.c: Remove epc_test_goto_if_fail.

2007-11-28  Mathias Hasselmann  <mathias@openismus.com>

	Rename epc_shell_expand_name to epc_publisher_expand_name: EpcShell
	is private API, and the function is related to publishing anyway.

	* libepc/publisher.c, libepc/publisher.h:
	Add epc_publisher_expand_name and epc_utf8_strtitle.
	* libepc/shell.c, libepc/shell.h:
	Remove epc_shell_expand_name and epc_utf8_strtitle.
	* tests/test-expand-name.c: Use epc_publisher_expand_name.
	* docs/reference/libepc/libepc-1.0-sections.txt: Update symbols.

2007-11-28  Mathias Hasselmann  <mathias@openismus.com>

	Correct the EpcProgressWindow constructor to properly assign the
	parent window by calling gtk_window_set_transient_for, instead
	of setting the "parent" property.

	* libepc-ui/progress-window.c: Properly set parent window.

2007-11-27  Mathias Hasselmann  <mathias@openismus.com>
