@@ -1,5 +1,14 @@
 2007-11-28  Mathias Hasselmann  <mathias@openismus.com>
 
+	Reuse epc_publisher_list function for HTTP request handlers.
+
+	* libepc/publisher.c: Remove epc_publisher_list_resource_item_xml and
+	-epc_publisher_list_resource_item_html. Remove and buffer field of
+	EpcListContext. Use epc_publisher_list in epc_publisher_handle_root
+	and epc_publisher_handle_list_path.
+
+2007-11-28  Mathias Hasselmann  <mathias@openismus.com>
+
 	Use lower directory hierarchy for storing certificates.
 
 	* libepc/tls.c: Modify epc_tls_get_filename.
